--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -46,23 +46,89 @@ main h2{
     font-family: "crimsonReg";
     margin: 0%;
     font-size: 3vw;
+    text-align: center;
 }
 
 main h3{
     color: #efe2c6;
     font-family: "crimsonReg";
-    font-size: 2vw;
+    font-size: 2.2vw;
     margin: 0;
 }
 
 main p{
     color: #efe2c6;
-    font-size: 1.9vw;
+    font-size: 2.4vw;
     font-family: "cormorantGaramondReg"
 }
 
-/* åbningstider */
+main ul{
+    padding: 0px;
+    color: #efe2c6;
+    font-family: "crimsonReg";
+    font-size: 1.9vw;
+}
 
+main ul li{
+   list-style-type: none;
+   text-align: center;
+}
+
+
+
+#grid{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+}
+
+#opening-time{
+    grid-column: 3/5;
+    grid-row: 1/4;
+    padding-top: 4vw;
+}
+
+#information{
+    grid-column: 1/4;
+    grid-row: 4/7;
+    padding-left: 8vw;
+    padding-top: 5vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
+}
+
+#map{
+    grid-column: 4/7;
+    grid-row: 4/7;
+    width: 100%;
+    height: 44vw;
+}
+
+@media (max-width:600px){
+    #grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+    
+    #opening-time{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        text-align: center;
+    }
+    #information{
+        grid-column: 1/2;
+        grid-row: 2/3;
+        text-align: center;
+        padding-left: 0;
+    }
+    #map{
+        grid-column: 1/2;
+        grid-row: 3/4;
+
+    }
+}
+
+/* 
 .grid2-1-2{
     display: grid;
     grid-template-columns: 2fr 1fr 2fr;
@@ -79,22 +145,8 @@ main p{
     border-radius: 1.5vw;
     margin-bottom: 2vw;
     margin-top: 2vw;
-    /* border: double #efe2c6 3px; */
-    /* border stiling ikke endelig, måske ikke nødvendig */
 }
 
-main ul{
-    padding: 0px;
-    color: #efe2c6;
-    font-family: "crimsonReg";
-    font-size: 1.9vw;
-}
-
-main ul li{
-   list-style-type: none;
-}
-
-/* guide */
 
 #guide{
     display: grid;
@@ -104,7 +156,6 @@ main ul li{
 
 #information{
     grid-column: 1/2;
-    /* width: 100%; */
     padding-left: 8vw;
     padding-top: 6vw;
     background-color: rgba(0, 0, 0, 0.4);
@@ -123,219 +174,4 @@ main ul li{
     grid-column: 2/3;
     width: 100%;
     height: 40vw;
-}
-
-
-
-
-
-/* @media */
-
-body{
-    background-image: url(/img/background_bar.webp);
-    background-size: cover;
-    background-attachment: fixed;
-    /* height: 100vh; */
-    background-position: center center;
-}
-
-main {
-    height: auto;
-}
-
-#background_opacity{
-    background-color: rgba(0, 0, 0, 0.5);
-    height: auto;
-    width: auto;
-}
-
-main h2{
-    color: #efe2c6;
-    font-family: "crimsonReg";
-    margin: 0%;
-    font-size: 3vw;
-}
-
-main h3{
-    color: #efe2c6;
-    font-family: "crimsonReg";
-    font-size: 2vw;
-    margin: 0;
-}
-
-main p{
-    color: #efe2c6;
-    font-size: 1.9vw;
-    font-family: "cormorantGaramondReg"
-}
-
-/* åbningstider */
-
-.grid2-1-2{
-    display: grid;
-    grid-template-columns: 2fr 1fr 2fr;
-}
-
-#opening-time{
-    text-align: center;
-    padding-top: 3vw;
-    padding-bottom: 3vw;
-    display: grid;
-    grid-column: 2/3;
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(3px);
-    border-radius: 1.5vw;
-    margin-bottom: 2vw;
-    margin-top: 2vw;
-    /* border: double #efe2c6 3px; */
-    /* border stiling ikke endelig, måske ikke nødvendig */
-}
-
-main ul{
-    padding: 0px;
-    color: #efe2c6;
-    font-family: "crimsonReg";
-    font-size: 1.9vw;
-}
-
-main ul li{
-   list-style-type: none;
-}
-
-/* guide */
-
-#guide{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-
-#information{
-    grid-column: 1/2;
-    /* width: 100%; */
-    padding-left: 8vw;
-    padding-top: 6vw;
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(3px);
-}
-
-.info{
-    width: 90%;
-}
-
-.info p{
-    margin-top: 4.5vw;
-}
-
-#map{
-    grid-column: 2/3;
-    width: 100%;
-    height: 40vw;
-}
-
-
-
-
-
-
-body{
-    background-image: url(/img/background_bar.webp);
-    background-size: cover;
-    background-attachment: fixed;
-    /* height: 100vh; */
-    background-position: center center;
-}
-
-main {
-    height: auto;
-}
-
-#background_opacity{
-    background-color: rgba(0, 0, 0, 0.5);
-    height: auto;
-    width: auto;
-}
-
-main h2{
-    color: #efe2c6;
-    font-family: "crimsonReg";
-    margin: 0%;
-    font-size: 3vw;
-}
-
-main h3{
-    color: #efe2c6;
-    font-family: "crimsonReg";
-    font-size: 2vw;
-    margin: 0;
-}
-
-main p{
-    color: #efe2c6;
-    font-size: 1.9vw;
-    font-family: "cormorantGaramondReg"
-}
-
-/* åbningstider */
-
-.grid2-1-2{
-    display: grid;
-    grid-template-columns: 2fr 1fr 2fr;
-}
-
-#opening-time{
-    text-align: center;
-    padding-top: 3vw;
-    padding-bottom: 3vw;
-    display: grid;
-    grid-column: 2/3;
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(3px);
-    border-radius: 1.5vw;
-    margin-bottom: 2vw;
-    margin-top: 2vw;
-    /* border: double #efe2c6 3px; */
-    /* border stiling ikke endelig, måske ikke nødvendig */
-}
-
-main ul{
-    padding: 0px;
-    color: #efe2c6;
-    font-family: "crimsonReg";
-    font-size: 1.9vw;
-}
-
-main ul li{
-   list-style-type: none;
-}
-
-/* guide */
-
-#guide{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-
-#information{
-    grid-column: 1/2;
-    /* width: 100%; */
-    padding-left: 8vw;
-    padding-top: 6vw;
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(3px);
-}
-
-.info{
-    width: 90%;
-}
-
-.info p{
-    margin-top: 4.5vw;
-}
-
-#map{
-    grid-column: 2/3;
-    width: 100%;
-    height: 40vw;
-} 
+} */
