--- a/css/undersider/galleri.css
+++ b/css/undersider/galleri.css
@@ -1,15 +1,113 @@
+/* *{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+} */
+
+/* body{
+    background: #ecf4fb;
+} */
+
+@font-face {
+    font-family: "crimsonReg";
+    src: url(/fonts/crimson-text/CrimsonText-Regular.ttf);
+}
+
+@font-face {
+    font-family: "crimsonBold";
+    src: url(/fonts/crimson-text/CrimsonText-Bold.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondReg";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Regular.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondItalic";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Italic.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondBold";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Bold.ttf);
+}
+
+
 body{
     width: 100%;
     height: 100vh;
     background-image: url(/img/background_bar.webp);
     background-size: cover;
     background-attachment: fixed;
+    
+}
+
+#background_opacity{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+main h2{
+    margin: 0;
+    padding: 0 0 4vw 0;
+    text-align: center;
+    color: #efe2c6;
+    font-size: 2.5vw;
+}
+@media (max-width: 600px) {
+    main h2{
+        padding: 3vw 0 4vw 0;
+        font-size: 3.5vw;
+    }
+}
+
+.img-gallery{
+    width: 80%;
+    margin: 0 auto 0;
+    padding-top: 7vw;
+    padding-bottom: 5vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+}
+
+.img-gallery img{
+    width: 100%;
+    cursor: pointer;
+    transition: 0.4s;
 }
 
 
-@media (max-width: 600px) {
+.img-gallery img:hover{
+    transform: scale(1.1);
+    border-radius: 10px;
+    box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
+}
 
-    
+.full-img{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+}
 
+.full-img img{
+    width: 90%;
+    max-width: 75vw;
+}
 
+.full-img span{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 30px;
+    color: #efe2c6;
+    cursor: pointer;
+    font-family: "crimsonBold";
 }
